<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculate.CalculateActivity"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterYourHeightText"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterHeightView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/heightTextHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heightTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterYourWeightText"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/enterHeightView" />

    <EditText
        android:id="@+id/enterWeightView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/weightTextHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weightTextView"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculateButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterWeightView"/>


</android.support.constraint.ConstraintLayout>